fix(#3): try fix shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,7 @@ body {
 html:has(.modal[open]),
 body:has(.modal[open]) {
   overflow: hidden;
+  overscroll-behavior: contain;
   /* touch-action: none; */
   /* position: fixed; */
   /* height: 100vh; */
